src/test/deca/context/valid/sansObjet/ComparaisonBoolWithInt.deca
{
    int x = 20;
    float y = 21.0;
    if (x < y){
        print("Dommage");
    }
}