src/test/deca/context/invalid/object/opCmp3.deca
class Y
{

}
class X
{
  int a;
  boolean b = true;
}
class A extends X
{
  void r(int a) asm ("a");
}

class B extends A
{
  X x = new X();
  Y y = new Y();
  float a;
  void getX()
  {
    if (x != Y){
      a = 0;
    }
  }
}
